--- a/templates/home.html
+++ b/templates/home.html
@@ -7,10 +7,10 @@
     <div style="font-size:25px; margin-bottom: 150px" >
         <h1 style="text-align:center">NOTICES</h1>
         <ul id="notices-list">
-            <li>You should be aware that your server may be stopped if it's detected idle.</li>
-            <li>You can request a package installation at <a href="https://github.com/Dawn-Team/JupyterDocker/issues">here</a></li>
-            <li>All tutorial files are put into the directory <code>Tutorials</code> in read only mode.</li>
-            <li>Default terminal is switched to <code>bash</code> but the displayed information is incomplete, you may want to fix it with command <code>bash</code></li>
+                <li>You should be aware that your server may be stopped if it's detected idle.</li>
+                <li>You can request a package installation at <a href="https://github.com/Dawn-Team/JupyterDocker/issues">here</a></li>
+                <li>All tutorial files are put into the directory <code>Tutorials</code> in read only mode.</li>
+                <li>Default terminal is switched to <code>bash</code> but the displayed information is incomplete, you may want to fix it with command <code>bash</code></li>
         </ul>
     </div>
     <div class="row">
@@ -37,14 +37,16 @@
     
     // TEST AJAX CODE.
     $(document).ready(function () {
-        let url="https://dawn-team.github.io/data/platforms.json";
+        let url="https://dawn-team.github.io/data/notices-list.json";
         $.ajax({
             url: url,
             type: "GET",
             async: true,
             dataType: "json",
             success: function (data) {
-                console.log(data);
+                $.each(data, function() {
+                    $("#notices-list").append(this);
+                });
             },
             error: function (data) {
                 console.log(data);
