--- a/templates/home.html
+++ b/templates/home.html
@@ -6,12 +6,7 @@
 
     <div style="font-size:25px; margin-bottom: 150px" >
         <h1 style="text-align:center">NOTICES</h1>
-        <ul id="notices-list">
-                <li>You should be aware that your server may be stopped if it's detected idle.</li>
-                <li>You can request a package installation at <a href="https://github.com/Dawn-Team/JupyterDocker/issues">here</a></li>
-                <li>All tutorial files are put into the directory <code>Tutorials</code> in read only mode.</li>
-                <li>Default terminal is switched to <code>bash</code> but the displayed information is incomplete, you may want to fix it with command <code>bash</code></li>
-        </ul>
+        <ul id="notices-list">  </ul>
     </div>
     <div class="row">
         <div class="text-center">
